--- a/mnfp_app/package.json
+++ b/mnfp_app/package.json
@@ -24,6 +24,11 @@
     "@mantine/hooks": "7.17.7",
     "@mantinex/mantine-logo": "^2.0.0",
     "@tabler/icons-react": "^3.31.0",
+    "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
+    "lodash": "^4.17.21",
+    "mantine-datatable": "^7.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -40,6 +45,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/lodash": "^4",
     "@types/node": "^22.13.11",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
