--- a/mnfp_app/tsconfig.json
+++ b/mnfp_app/tsconfig.json
@@ -21,5 +21,7 @@
       "@test-utils": ["./test-utils"]
     }
   },
-  "include": ["src", "test-utils"]
+  "include": ["src", "test-utils"],
+  "node": true,
+  
 }
