--- a/serverlessservice/pyproject.toml
+++ b/serverlessservice/pyproject.toml
@@ -18,6 +18,7 @@ mangum = "^0.19.0"
 constructs = "^10.3.0"
 psycopg2-binary = "^2.9.9"
 requests = "^2.32.3"
+pyyaml = "^6.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.3.3"
